The One Ring 2e/sheet.css
/* ... */
.charsheet input[type="text"]{
    width: 150px;
}
.charsheet input.sheet-number {
    width: 3.5em !important;
}
.charsheet input[type="number"] {
  -webkit-appearance: textfield;
     -moz-appearance: textfield;
          appearance: textfield;
}
.charsheet input[type="number"]::-webkit-inner-spin-button, 
.charsheet input[type="number"]::-webkit-outer-spin-button { 
  -webkit-appearance: none;
}
/* Combobox */
.charsheet select{
    width: min-content;
    border-left: 0;
    border-right: 0;
    border-top: 0;
    line-height: 18px;
    height: 17px;
    padding: 0px 4px 0px 4px;
}
/* Checkboxes*/
.charsheet input[type="checkbox"]{
    padding: 0px !important;
    margin: 0px !important;
    width: 12px !important;
}
.charsheet :is(#skill-strength,#skill-heart,#skill-wits,#virtues,#rewards,#protection) input[type="checkbox"]:checked + label,
.charsheet :is(#skill-strength,#skill-heart,#skill-wits,#virtues,#rewards,#protection) input[type="checkbox"]:checked + span {
    text-decoration: underline;
}
.charsheet input[type='checkbox'],
.charsheet input[type='radio'] {
	accent-color: #AC4637;
}

/* Dots*/
.charsheet .sheet-dots {
    display: block;
    float: right;
    top: 2px;
    right: 0;
    -margin: 1px 15px 0px 0px;
}
.charsheet .sheet-dots input[type="radio"] {
    opacity: 0;
    width: 10px;
    height: 10px;
    position: relative;
    top: -4px;
    left: -4px;
    margin: -8px;
    cursor: pointer;
    z-index: 1;
	transform: rotate(45deg);
}
.charsheet .sheet-dots input[type="radio"] + span {
	margin: 5px 5px 0px -5px;
    line-height: 5px;
    font-size: 7px;
	transform: rotate(45deg);
	-webkit-transform: rotate(45deg);
}
.charsheet .sheet-dots input[type="radio"] + span:before{
    margin-right: 5px;
    display: inline-flex;
    text-align: center;
    --moz-animation-direction: top;
    line-height: 10px;
    width: 8px;
    height: 8px;
    content: "";
    opacity:1;
	transform: rotate(45deg);
}
.charsheet .sheet-dots input[type="radio"][value="0"] + span:before {
	content: 'X';
	transform: unset;
	-color: #AC4637;
	opacity: 0.3;
	border: 0.5px solid grey;
	border-radius: 50%;
	margin-right: 8px;
	font-family: Papyrus, "Palatino Linotype", "Book Antiqua", Palatino, serif, sans-serif;
}
.charsheet .sheet-dots input[type='radio']:checked ~ input[type='radio'] + span:before {
    background-size:100%;
	border: 2px solid #AC4637;
	background-color: transparent; 
	transform: rotate(45deg);
}
.charsheet .sheet-dots input[type="radio"]:not([value="0"]) + span:before {
    background-size:100%;
	border: 2px solid #AC4637;
	background-color: #AC4637; 
	transform: rotate(45deg);
}
/* Remove dot from all radios _after_ selected one */
.charsheet .sheet-dots input[type="radio"]:checked ~ input[type="radio"] + span:before{    
    content: "";
}
.charsheet .sheet-hover-info {
    position: absolute;
    background: white;
    z-index: 10;
    padding: 20px;
    width: 300px;
    visibility: hidden;
    opacity: 0;
    box-shadow: 0 3px 15px rgba(0,0,0,.1);
    transition:visibility 0s linear 0.3s, opacity 0.3s linear;
    text-align: left;
    overflow-wrap: break-word;
    word-break: break-word;
}
.charsheet span.label:hover + .sheet-hover-info,
.charsheet span.sheet-label:hover + .sheet-hover-info,
.charsheet input:hover + span.sheet-label + .sheet-hover-info,
.charsheet label:hover + .sheet-hover-info {
    visibility: visible;
    opacity: 1;
    transition-delay: 1s;
}
/* Diamond */
.charsheet :is(span.diamond-red,span.diamond) {
    display:inline-flex;
    box-sizing: content-box;
    flex-wrap: nowrap;
    align-content: center;
    align-items: center;
    justify-content: center;
    justify-self: center;
    border: 4px solid transparent;
    background-color: var(--bg-color);
    border-image-source: var(--borderbrown);
    border-image-slice: 24 24 24 24;
    border-image-repeat: repeat;
    width: 35px;
    height: 35px;
    transform: rotate(45deg);
}
.charsheet span.diamond-red {
    border-image-source: var(--borderred);
}
.charsheet span[class|="diamond"] input[type="number"]{
    border-bottom: 0;
}
.charsheet :is(span.diamond-red,span.diamond) span {
    background-color: var(--bg-color);
    transform: rotate(-45deg);
    border: 0; 
}
.charsheet :is(span.diamond-small-red,span.diamond-small) {
    display:inline-flex;
    box-sizing: content-box;
    flex-wrap: nowrap;
    align-content: center;
    align-items: center;
    justify-content: center;
    border: 4px solid transparent;
    background-color: var(--bg-color);
    border-image-source: var(--borderbrown);
    border-image-slice: 24 24 24 24;
    border-image-repeat: repeat;
    width: 20px;
    height: 20px;
    transform: rotate(45deg);
}
.charsheet span.diamond-small-red {
    border-image-source: var(--borderred);
}
.charsheet :is(span.diamond-small-red,span.diamond-small) span {
    background-color: var(--bg-color);
    transform: rotate(-45deg);
    border: 0; 
}
.charsheet .hidden {
    display: none;
}
/* Borders */
.charsheet #content :is(#strength,#wits,#skill-strength,#skill-heart,#skill-wits,#conditions,#mount) {
	border: 6px solid transparent;
	/* background-color: var(--bg-color); */
	border-image-source: var(--borderbrown);
	border-image-repeat: repeat;
	margin: 0; 
	box-sizing: border-box;
}
.charsheet #content #strength {
	border-image-slice: 24 0 24 24;
	border-top: 0;
	border-bottom: 0;
}
.charsheet #content #skill-strength  {
	border-image-slice: 24 24 24 24;
	border-top: 0;
	border-right: 0;
	padding-bottom: 10px;
	margin-top: -10px;
}
.charsheet #content #skill-heart {	
	border-image-slice: 24 0 24 24;
	border-left: 0;
	border-right: 0;
	border-top: 0;
	padding-bottom: 10px;
	margin-top: -10px;
}
.charsheet #content #skill-wits {	
	border-image-slice: 24 24 24 0;
	border-left: 0;
	border-top: 0;
	padding-bottom: 10px;
	margin-top: -10px;
}
.charsheet #content #wits {
	border-image-slice: 24 24 24 0;
	border-top: 0;
	border-bottom: 0;
}
/* ... */

